# robotics

./: .gitignore  .vscode  Cargo.toml  README.md
handler/: main.ts
handler/src/: esp32_client.ts  favicon_handler.ts  main.ts  request_router.ts
src/: main.rs
test-esp32-c6/: Cargo.toml  wokwi.toml
test-esp32-c6/.devcontainer/: devcontainer.json
test-esp32-c6/src/: command_handler.rs  led_control.rs  main.rs  tcp_server.rs  wifi_manager.rs
test_esp32/: Cargo.toml  README.md  build.rs
